# rtic-blink

stm32f3_blinky_v1/: Cargo.toml  openocd.cfg
stm32f3_blinky_v1/.cargo/: config
stm32f3_blinky_v2/: Cargo.toml  Embed.toml
stm32f3_blinky_v2/src/: main.rs
stm32l0_blinky_async/: Cargo.toml  Embed.toml  README.md
stm32l0_blinky_async/.cargo/: config.toml
stm32l0_blinky_async/src/: main.rs
stm32l0_blinky_v1/: Cargo.toml  openocd.gdb  readme.md
stm32l0_blinky_v1/src/: main.rs
