[package]
authors = ["Simsys <winfried.simon@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "stm32f3-blinky"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.7"
rtic = { git = "https://github.com/rtic-rs/rtic", features = ["thumbv6-backend"] }
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic", features = ["cortex-m-systick"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
stm32l0xx-hal = { version = "0.9.0", features = ["mcu-STM32L051C8Tx", "rt"] }

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f3-blinky"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
