[package]
authors = ["Sajjad <Sajjd7997@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "stm32l0-blinky"
version = "0.1.0"

[workspace]

[dependencies.rtic]
version = "=2.0.0-alpha.2"
features = ["thumbv6-backend"]

[dependencies.rtic-monotonics]
version = "=1.0.0-alpha.2"
features = ["cortex-m-systick"]

[dependencies]
embedded-hal = "0.2.7"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[dependencies.stm32l0xx-hal]
features = ["mcu-STM32L051C8Tx", "rt"]
version = "0.9.0"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32l0-blinky"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
